Application is now translated

--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   "dependencies": {
     "angular": "^1.4.6",
     "angular-animate": "^1.4.6",
+    "angular-cookies": "^1.4.8",
     "angular-local-storage": "^0.2.2",
     "angular-mocks": "^1.4.6",
     "angular-resource": "^1.4.6",
     "angular-sanitize": "^1.4.6",
     "angular-translate": "^2.8.1",
+    "angular-translate-loader-static-files": "^2.8.1",
+    "angular-translate-storage-cookie": "^2.8.1",
+    "angular-translate-storage-local": "^2.8.1",
     "angular-ui-router": "^0.2.15",
     "ionic-sdk": "^1.1.0",
     "ng-cordova": "^0.1.23-alpha",
