--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular-cookies": "^1.4.8",
     "angular-local-storage": "^0.2.2",
     "angular-mocks": "^1.4.6",
+    "angular-permission": "^1.1.1",
     "angular-resource": "^1.4.6",
     "angular-sanitize": "^1.4.6",
     "angular-translate": "^2.8.1",
