Enables ionic analytics

--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "lbServices": "./client/scripts/lbServices.js",
     "ionic": "ionic-sdk/release/js/ionic.js",
     "ionic-angular": "ionic-sdk/release/js/ionic-angular.js",
+    "ionic-platform-web-client": "./bower_components/ionic-platform-web-client/dist/ionic.io.bundle.js",
     "angular-sprintf": "sprintf-js/src/angular-sprintf.js"
   },
   "browserify": {
