--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "mocha": "2.3.3",
     "mocha-lcov-reporter": "1.0.0",
     "moment": "2.10.6",
+    "ng-cache-loader": "0.0.15",
     "node-jsxml": "0.6.0",
     "node-sass": "3.4.1",
     "phantomjs": "1.9.18",
