--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular-auto-validate": "^1.19.0",
     "angular-cookies": "^1.4.8",
     "angular-local-storage": "^0.2.2",
+    "angular-messages": "^1.4.8",
     "angular-mocks": "^1.4.6",
     "angular-moment": "^1.0.0-beta.3",
     "angular-permission": "^1.1.1",
