--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "html-loader": "0.3.0",
     "html2js-browserify": "1.1.0",
     "inquirer": "0.11.0",
+    "ionic": "^1.7.12",
     "ionic-app-lib": "0.6.4",
     "ionic-platform-web-client": "0.2.1",
     "ionic-service-analytics": "^0.2.5",
