--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "url": ""
   },
   "dependencies": {
-    "angular": "^1.4.6",
-    "angular-animate": "^1.4.6",
+    "angular": "1.4.6",
+    "angular-animate": "1.4.6",
     "angular-auto-validate": "^1.19.0",
     "angular-cookies": "^1.4.8",
     "angular-local-storage": "^0.2.2",
     "angular-messages": "^1.4.8",
-    "angular-mocks": "^1.4.6",
+    "angular-mocks": "1.4.6",
     "angular-moment": "^1.0.0-beta.3",
     "angular-permission": "^1.1.1",
-    "angular-resource": "^1.4.6",
-    "angular-sanitize": "^1.4.6",
+    "angular-resource": "1.4.6",
+    "angular-sanitize": "1.4.6",
     "angular-timer": "^1.3.3",
     "angular-translate": "^2.8.1",
     "angular-translate-loader-static-files": "^2.8.1",
@@ -51,6 +51,7 @@
     "babel-runtime": "5.8.29",
     "babelify": "6.4.0",
     "bluebird": "3.0.5",
+    "bower": "^1.7.7",
     "brfs": "1.4.1",
     "browser-sync": "2.10.0",
     "browserify": "12.0.1",
@@ -89,6 +90,7 @@
     "gulp-istanbul": "0.10.2",
     "gulp-jscs": "3.0.2",
     "gulp-jshint": "1.12.0",
+    "gulp-karma": "0.0.5",
     "gulp-less": "3.0.3",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "1.2.1",
@@ -121,14 +123,14 @@
     "jasmine-reporters": "2.0.7",
     "jasmine-spec-reporter": "2.4.0",
     "jshint-stylish": "2.1.0",
-    "karma": "0.13.15",
-    "karma-browserify": "4.4.0",
-    "karma-coverage": "0.5.3",
+    "karma": "0.12.37",
+    "karma-browserify": "4.2.1",
+    "karma-coverage": "0.4.2",
     "karma-jasmine": "0.3.6",
-    "karma-mocha-reporter": "1.1.1",
-    "karma-phantomjs-launcher": "0.2.1",
-    "karma-sourcemap-loader": "0.3.6",
-    "karma-webpack": "1.7.0",
+    "karma-mocha-reporter": "1.0.2",
+    "karma-phantomjs-launcher": "0.2.0",
+    "karma-sourcemap-loader": "0.3.5",
+    "karma-webpack": "1.5.1",
     "less": "2.5.3",
     "less-loader": "2.2.1",
     "lodash": "3.10.1",
@@ -144,6 +146,7 @@
     "protractor": "2.5.1",
     "protractor-istanbul-plugin": "2.0.0",
     "protractor-jasmine2-screenshot-reporter": "0.1.7",
+    "q": "^1.4.1",
     "require-dir": "0.3.0",
     "rimraf": "2.4.3",
     "run-sequence": "1.1.4",
