--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "watchify": "3.6.0",
     "webpack": "1.12.6",
     "webpack-dev-server": "1.12.1",
+    "xcode": "^0.8.3",
     "yargs": "3.30.0"
   },
   "engines": {
