Uses latest version of phonegap plugin push

--- a/package.json
+++ b/package.json
@@ -217,7 +217,7 @@
     "cordova-plugin-geolocation",
     "cordova-plugin-transport-security",
     "cordova-plugin-network-information",
-    "phonegap-plugin-push@1.4.5",
+    "phonegap-plugin-push",
     "ionic-plugin-keyboard",
     "ionic-plugin-deploy",
     "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git"
