Adds missing dependencies

--- a/package.json
+++ b/package.json
@@ -128,13 +128,16 @@
     "karma-browserify": "4.2.1",
     "karma-coverage": "0.4.2",
     "karma-jasmine": "0.3.6",
-    "karma-mocha-reporter": "1.0.2",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^1.2.2",
     "karma-phantomjs-launcher": "0.2.0",
+    "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "0.3.5",
     "karma-webpack": "1.7.0",
     "less": "2.5.3",
     "less-loader": "2.2.1",
     "lodash": "3.10.1",
+    "lolex": "^1.4.0",
     "map-stream": "0.0.6",
     "mkdirp": "0.5.1",
     "mocha": "2.3.3",
