--- a/circle.yml
+++ b/circle.yml
@@ -9,4 +9,4 @@ deployment:
 test:
   post:
       - npm install -g codeclimate-test-reporter
-      - codeclimate-test-reporter < coverage/unit/lcov/lcov.info
+      - codeclimate-test-reporter < coverage/lcov/lcov.info
